--- a/package.json
+++ b/package.json
@@ -19,13 +19,9 @@
     "gulp-umd": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "lodash.escape": "^4.0.1",
-    "minimist": "^1.2.8",
-    "npm-force-resolutions": "^0.0.10"
+    "minimist": "^1.2.8"
   },
   "overrides": {
-    "form-data": "^4.0.0"
-  },
-  "resolutions": {
     "braces": "^3.0.2",
     "loader-utils": "^1.4.2",
     "glob-parent": "^5.1.2",
@@ -33,8 +29,5 @@
     "minimist": "^1.2.5",
     "json": "^1.0.2",
     "form-data": "^4.0.0"
-  },
-  "scripts": {
-    "preinstall": "npx npm-force-resolutions"
   }
 }
