--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "minimist": "^1.2.8"
   },
   "overrides": {
-    "form-data": "2.5.5"
+    "form-data": "2.5.5",
+    "sha.js": "2.4.12"
   }
 }
